Update api.yml, app.py & models.py
