# app.py
@@ -5,6 +5,30 @@ import json
 from flask_bcrypt import Bcrypt
 from random import randint
 from flask_mail import Mail, Message
+from datetime import datetime, date
+from dateutil.relativedelta import relativedelta
+import secrets
+import string
+
+
+def user_to_json(user):
+    return {
+        'id': user.id,
+        'username': user.username,
+        'email': user.email,
+        'name': user.name,
+        'surname': user.surname,
+        'gender': user.gender,
+        'age': user.age,
+        'phone': user.phone,
+        'city': user.city,
+        'country': user.country,
+        'address': user.address,
+        'postalCode': user.postal_code,
+        'isAdmin': user.is_admin,
+        'dateOfBirth': user.date_of_birth
+    }
+
 
 #endpoints
 def sendVerificationEmail(user_id):
@@ -18,14 +42,21 @@ def sendVerificationEmail(user_id):
   else:
       return {'error': '{} not found'.format(user_id)}, 404
 
+# TODO: da se dodaj gender i date of birth
 def registration(user_body):
     found_user = db.session.query(User).filter_by(username=user_body['username']).first()
     if not found_user:
         if user_body['password'] == user_body['repeatedPassword']:
-            new_user=User(username=user_body['username'],
+            date_of_birth = datetime.strptime(user_body['dateOfBirth'], '%m-%d-%Y')
+            today = date.today()
+            age = relativedelta(today, date_of_birth).years
+            letter_and_digits = string.ascii_letters + string.digits
+            code = ''.join(secrets.choice(letter_and_digits) for i in range(6))
+            new_user = User(username=user_body['username'],
             email=user_body['email'], name=user_body['name'],
             surname=user_body['surname'], password=bcrypt.generate_password_hash(user_body['password']),
-            is_admin=False, is_verified=False, verification_code=randint(1000, 9999))
+            is_admin=False, is_verified=False, date_of_birth=user_body['dateOfBirth'],
+             gender=user_body['gender'], age=age, verification_code=code)
         else:
             return {'error': '{} passwords do not match'.format(user_body['username'])}, 400
     else:
@@ -34,22 +65,8 @@ def registration(user_body):
     db.session.commit()
     sendVerificationEmail(new_user.id)
     #TODO: send notification to Statistics MS
-    return {
-        'id': new_user.id,
-        'username': new_user.username,
-        'email': new_user.email,
-        'name': new_user.name,
-        'surname': new_user.surname,
-        'gender': new_user.gender,
-        'age': new_user.age,
-        'phone': new_user.phone,
-        'city': new_user.city,
-        'country': new_user.country,
-        'address': new_user.address,
-        'postalCode': new_user.postal_code,
-        'isAdmin': new_user.is_admin,
-        'dateOfBirth': new_user.date_of_birth
-    }
+    return user_to_json(new_user)
+
 
 def getRole(user_id):
     found_user = db.session.query(User).get(user_id)
@@ -58,27 +75,14 @@ def getRole(user_id):
     else:
         return {'error': '{} not found'.format(user_id)}, 404
 
+
 def getUserDetails(user_id):
     found_user = db.session.query(User).get(user_id)
     if found_user:
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(user_id)}, 404
+
 
 def getUserImages(user_id):
     found_user = db.session.query(User).get(user_id)
@@ -91,6 +95,7 @@ def getUserImages(user_id):
         return {'images': json_images}
     else:
         return {'error': '{} not found'.format(user_id)}, 404
+
 
 def addImageToUser(image_body):
     found_user = db.session.query(User).get(image_body['user_id'])
@@ -112,224 +117,68 @@ def addImageToUser(image_body):
     else:
         return {'error': '{} not found'.format(user_id)}, 404
 
+
 def changePassword(password_body):
     found_user = db.session.query(User).get(password_body['user_id'])
     if found_user:
         if bcrypt.check_password_hash(found_user.password, password_body['oldPassword']):
             found_user.password = bcrypt.generate_password_hash(password_body['newPassword'])
             db.session.commit()
-            return {
-                'id': new_user.id,
-                'username': new_user.username,
-                'email': new_user.email,
-                'name': new_user.name,
-                'surname': new_user.surname,
-                'gender': new_user.gender,
-                'age': new_user.age,
-                'phone': new_user.phone,
-                'city': new_user.city,
-                'country': new_user.country,
-                'address': new_user.address,
-                'postalCode': new_user.postal_code,
-                'isAdmin': new_user.is_admin,
-                'dateOfBirth': new_user.date_of_birth
-            }
+            return user_to_json(found_user)
         else:
             return {'error': '{} passwords do not match'.format(user_body['username'])}, 400
     else:
         return {'error': '{} not found'.format(password_body['user_id'])}, 404
-
-def changeGender(gender_body):
-    found_user = db.session.query(User).get(gender_body['user_id'])
-    if found_user:
-        found_user.gender = gender_body['gender']
-        db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
-    else:
-        return {'error': '{} not found'.format(gender_body['user_id'])}, 404
-
-def changeAge(age_body):
-    found_user = db.session.query(User).get(age_body['user_id'])
-    if found_user:
-        found_user.age = age_body['age']
-        db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
-    else:
-        return {'error': '{} not found'.format(age_body['user_id'])}, 404
 
 def changePhone(phone_body):
     found_user = db.session.query(User).get(phone_body['user_id'])
     if found_user:
         found_user.phone = phone_body['phone']
         db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(phone_body['user_id'])}, 404
+
 
 def changeCity(city_body):
     found_user = db.session.query(User).get(city_body['user_id'])
     if found_user:
         found_user.city = city_body['city']
         db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(city_body['user_id'])}, 404
+
 
 def changeCountry(country_body):
     found_user = db.session.query(User).get(country_body['user_id'])
     if found_user:
         found_user.country = country_body['country']
         db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(country_body['user_id'])}, 404
+
 
 def changeAddress(address_body):
     found_user = db.session.query(User).get(address_body['user_id'])
     if found_user:
         found_user.address = address_body['address']
         db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(address_body['user_id'])}, 404
+
 
 def changePostalCode(postal_body):
     found_user = db.session.query(User).get(postal_body['user_id'])
     if found_user:
         found_user.postal_code = postal_body['postalCode']
         db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
+        return user_to_json(found_user)
     else:
         return {'error': '{} not found'.format(postal_body['user_id'])}, 404
 
-def changeDateOfBirth(birth_body):
-    found_user = db.session.query(User).get(birth_body['user_id'])
-    if found_user:
-        found_user.date_of_birth = birth_body['birth']
-        db.session.commit()
-        return {
-            'id': new_user.id,
-            'username': new_user.username,
-            'email': new_user.email,
-            'name': new_user.name,
-            'surname': new_user.surname,
-            'gender': new_user.gender,
-            'age': new_user.age,
-            'phone': new_user.phone,
-            'city': new_user.city,
-            'country': new_user.country,
-            'address': new_user.address,
-            'postalCode': new_user.postal_code,
-            'isAdmin': new_user.is_admin,
-            'dateOfBirth': new_user.date_of_birth
-        }
-    else:
-        return {'error': '{} not found'.format(birth_body['user_id'])}, 404
 
 def verifyUser(verification_body):
     found_user = db.session.query(User).get(verification_body['user_id'])
@@ -343,6 +192,25 @@ def verifyUser(verification_body):
     else:
         return {'error': '{} not found'.format(verification_body['user_id'])}, 404
 
+
+def getAllUsers():
+    users = db.session.query(User).all()
+    users_json = []
+    for user in users:
+        users_json.append(user_to_json(user))
+    return users_json
+
+
+def deleteUser(user_id):
+    db.session.query(User).filter_by(id=user_id).delete()
+    return {'message': 'User successfully deleted'}, 200
+
+
+def deleteImage(image_id):
+    db.session.query(Image).filter_by(id=image_id).delete()
+    return {'message': 'Image successfully deleted'}, 200
+
+
 connexion_app = connexion.App(__name__, specification_dir="./")
 app = connexion_app.app
 bcrypt = Bcrypt(app)
@@ -350,6 +218,7 @@ app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///app.db'
 db = SQLAlchemy(app)
 migrate = Migrate(app, db)
 connexion_app.add_api("api.yml")
+
 
 # Setup for mail
 app.config['MAIL_SERVER']='smtp.gmail.com'
@@ -360,8 +229,10 @@ app.config['MAIL_USE_TLS'] = False
 app.config['MAIL_USE_SSL'] = True
 mail = Mail(app)
 
+
 # dummy reference for migrations only
 from models import User, Image
+
 
 if __name__ == "__main__":
     connexion_app.run(host='0.0.0.0', port=5000, debug=True)
